@@ -43,7 +43,7 @@ else
 fi
 AC_MSG_RESULT($GSWNAMES)
 AC_SUBST(GSWNAMES)
- 
+
 #--------------------------------------------------------------------
 # Check for GDL2
 #--------------------------------------------------------------------
