@@ -1,3 +1,9 @@
+2004-01-13  David Ayers  <d.ayers@inode.at>
+
+	* config/pathxml.m4: Whitespace fixes for coding standards.
+	* configure.ac: Ditto.
+	* configure: Regenerate.
+	
 2004-01-12  David Ayers  <d.ayers@inode.at>
 
 	* gsweb.make.in: Change 'WO' framework names to WobObjects,
